--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -100,6 +100,7 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="text"
+            android:maxLength="8"
             android:textSize="20sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
